UI: Fixed horizontal scroll issues for ultra-narrow 20:9 mobile screens

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,8 @@
   body {
     background-color: black;
     color: white;
+    width: 100%;
+    position: relative;
     @apply antialiased overflow-x-hidden;
   }
 
